<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scope</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <color name="indigo">#4B0082</color>
    <color name="midnight_blue">#191970</color>
    <color name="gainsborough">#DCDCDC</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="button_scan">SCAN</string>
    <string name="crop">Crop</string>
    <string name="done">Done</string>
    <string name="ocr">OCR it!</string>
    <string name="empty"></string>
    <string name="receive">Received</string>
    <string name="switch_preprocessor">Pre-Processing</string>
    <string name="save_settings">Save Settings</string>
    <string name="upload_file">From Gallery</string>
    <string name="title_activity_contacts">Add to Contacts</string>
    <string name="hnt_et_name">Display Name</string>
    <string name="hnt_et_mobile_phone">Mobile Phone</string>
    <string name="hnt_et_home_phone">Fax</string>
    <string name="hnt_et_home_email">Email</string>
    <string name="hnt_et_work_email">Address</string>
    <string name="str_btn_add">Add Contact</string>
    <string name="str_btn_contacts">Open Contacts List</string>
    <string name="title_activity_central_progress">CentralProgressActivity</string>
    <string name="title_activity_adaptive_pre_process">AdaptivePreProcess</string>

</resources>